# projekt.ReaperKey

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  config.toml.example  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-commit
.github/workflows/: ci-issue.yml  ci.yml  release.yml
dashboard/: index.html  package-lock.json  package.json  server.js  vite.config.ts  vitest.config.ts  vitest.setup.ts
dashboard/__tests__/: utils.test.ts
dashboard/__tests__/components/: App.test.tsx
dashboard/__tests__/server/: activity.test.ts  database.test.ts  file-api.test.ts  github.test.ts  health.test.ts  internals.test.ts  memo.test.ts  sse.test.ts
dashboard/src/: App.tsx  main.tsx  md.css  utils.ts
docs/: deployment.md  quickstart.md  roadmap.md  security-model.md
docs/agents/: AGENTS.md  DECISIONS.md  GOVERNANCE.md  HEALTH.md  INBOX.md  OUTBOX.md  SECURITY.md  STACK.md  TEST_SPECS.md  TOOLS.md  v1prd.md
docs/api/: endpoints.md
docs/sdk/: hooks.md
example/: README.md  index.html  package-lock.json  package.json
example/src/: App.tsx  main.tsx
sdk/: .eslintrc.json  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts  vitest.e2e.config.ts
sdk/src/: client.ts  crypto.ts  index.ts  kernel-address.ts  provider.tsx  session-registration.ts  types.ts  userop.ts
sdk/tests/: client.test.ts  crypto.test.ts  e2e.bundler.test.ts  hooks.test.ts  kernel-address.test.ts  session-registration.test.ts  setup.crypto.ts  userop.test.ts
server/: Cargo.toml  tarpaulin.toml
server/migrations/: 0001_init.sql  0002_intent_reason.sql  0003_session_key_address.sql  0004_token_denylist.sql
server/migrations_pg/: 0001_init.sql  0002_intent_reason.sql
server/src/: activity.rs  auth_jwt.rs  chain.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  openapi.rs
server/src/middleware/: auth_extractor.rs  mod.rs  rate_limit.rs
server/src/models/: account.rs  intent.rs  mod.rs  session.rs  user.rs
server/src/routes/: account.rs  auth.rs  health.rs  intent.rs  mod.rs  recovery.rs  session_key.rs
server/tests/: account.rs  auth.rs  e2e.rs  health.rs  helpers.rs  intent.rs  recovery.rs  security.rs  session_key.rs
(+30 files in other folders)
